Bug 822866 Make mozilla::widget::BaseEventFlags which is a POD struct for VC r=smaug