widget/gonk/nsAppShell.cpp
@@ -207,7 +207,7 @@ sendKeyEventWithMsg(uint32_t keyCode,
     event.keyCode = keyCode;
     event.location = nsIDOMKeyEvent::DOM_KEY_LOCATION_MOBILE;
     event.time = timeMs;
-    event.mFlags |= flags;
+    event.mFlags.Union(flags);
     return nsWindow::DispatchInputEvent(event);
 }
 
